--- a/.github/workflows/checks.yaml
+++ b/.github/workflows/checks.yaml
@@ -25,16 +25,15 @@ jobs:
       with:
         go-version: ${{ env.golang-version }}
     - run: make --always-make format generate && git diff --exit-code
-  check-links:
+  check-docs:
     runs-on: ubuntu-latest
-    name: Check markdown links
+    name: Check Documentation formatting and links
     steps:
     - uses: actions/checkout@v2
-    - uses: gaurav-nelson/github-action-markdown-link-check@v1
+    - uses: actions/setup-go@v2
       with:
-        use-quiet-mode: 'yes'
-        config-file: '.github/workflows/.mlc_config.json'
-      continue-on-error: true
+        go-version: ${{ env.golang-version }}
+    - run: make check-docs
   check-golang:
     runs-on: ubuntu-latest
     name: Golang linter
