*: pin to golang 1.16 everywhere
Signed-off-by: paulfantom <pawel@krupa.net.pl>

--- a/.github/workflows/e2e.yaml
+++ b/.github/workflows/e2e.yaml
@@ -34,22 +34,26 @@ jobs:
             thanosruler: ""
     steps:
     - uses: actions/checkout@v2
+    - uses: actions/setup-go@v2
+      with:
+        go-version: ${{ env.golang-version }}
+    - name: Build images
+      run: |
+        export SHELL=/bin/bash
+        make build image
     - name: Start KinD
       uses: engineerd/setup-kind@v0.5.0
       with:
         version: ${{ env.kind-version }}
         image: ${{ env.kind-image }}
         wait: 300s
-        go-version: ${{ env.golang-version }}
     - name: Wait for cluster to finish bootstraping
       run: |
         kubectl wait --for=condition=Ready pods --all --all-namespaces --timeout=300s
         kubectl cluster-info
         kubectl get pods -A
-    - name: Build and load images
+    - name: Load images
       run: |
-        export SHELL=/bin/bash
-        make build image
         kind load docker-image quay.io/prometheus-operator/prometheus-operator:$(git rev-parse --short HEAD)
         kind load docker-image quay.io/prometheus-operator/prometheus-config-reloader:$(git rev-parse --short HEAD)
         kubectl apply -f scripts/kind-rbac.yaml
