--- a/bundle.yaml
+++ b/bundle.yaml
@@ -17229,7 +17229,7 @@ spec:
                 type: object
               alertDropLabels:
                 description: AlertDropLabels configure the label names which should
-                  be dropped in ThanosRuler alerts. If `labels` field is not provided,
+                  be dropped in ThanosRuler alerts. Default replica label
                   `thanos_ruler_replica` will be dropped in alerts by default.
                 items:
                   type: string
@@ -19559,7 +19559,7 @@ spec:
                 additionalProperties:
                   type: string
                 description: Labels configure the external label pairs to ThanosRuler.
-                  If not provided, default replica label `thanos_ruler_replica` will
+                  Default replica label `thanos_ruler_replica` will
                   be added as a label and be dropped in alerts.
                 type: object
               listenLocal:
