*: fix action and script publishing images
The workflow didn't work properly when tagging releases because it
wasn't enabled for tag events. We exclude all tags that start by `pkg`
since they are only relevant for Go sub-modules.

Signed-off-by: Simon Pasquier <spasquie@redhat.com>

--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -6,6 +6,9 @@ on:
       - 'release-*'
       - 'master'
       - 'main'
+    tags:
+      - 'v*'
+      - '!pkg*'
 
 env:
   golang-version: '1.16'
