--- a/bundle.yaml
+++ b/bundle.yaml
@@ -21643,7 +21643,7 @@ metadata:
   labels:
     app.kubernetes.io/component: controller
     app.kubernetes.io/name: prometheus-operator
-    app.kubernetes.io/version: 0.51.1-rc.0
+    app.kubernetes.io/version: 0.51.1
   name: prometheus-operator
 roleRef:
   apiGroup: rbac.authorization.k8s.io
@@ -21660,7 +21660,7 @@ metadata:
   labels:
     app.kubernetes.io/component: controller
     app.kubernetes.io/name: prometheus-operator
-    app.kubernetes.io/version: 0.51.1-rc.0
+    app.kubernetes.io/version: 0.51.1
   name: prometheus-operator
 rules:
 - apiGroups:
@@ -21740,7 +21740,7 @@ metadata:
   labels:
     app.kubernetes.io/component: controller
     app.kubernetes.io/name: prometheus-operator
-    app.kubernetes.io/version: 0.51.1-rc.0
+    app.kubernetes.io/version: 0.51.1
   name: prometheus-operator
   namespace: default
 spec:
@@ -21756,13 +21756,13 @@ spec:
       labels:
         app.kubernetes.io/component: controller
         app.kubernetes.io/name: prometheus-operator
-        app.kubernetes.io/version: 0.51.1-rc.0
+        app.kubernetes.io/version: 0.51.1
     spec:
       containers:
       - args:
         - --kubelet-service=kube-system/kubelet
-        - --prometheus-config-reloader=quay.io/prometheus-operator/prometheus-config-reloader:v0.51.1-rc.0
-        image: quay.io/prometheus-operator/prometheus-operator:v0.51.1-rc.0
+        - --prometheus-config-reloader=quay.io/prometheus-operator/prometheus-config-reloader:v0.51.1
+        image: quay.io/prometheus-operator/prometheus-operator:v0.51.1
         name: prometheus-operator
         ports:
         - containerPort: 8080
@@ -21789,7 +21789,7 @@ metadata:
   labels:
     app.kubernetes.io/component: controller
     app.kubernetes.io/name: prometheus-operator
-    app.kubernetes.io/version: 0.51.1-rc.0
+    app.kubernetes.io/version: 0.51.1
   name: prometheus-operator
   namespace: default
 ---
@@ -21799,7 +21799,7 @@ metadata:
   labels:
     app.kubernetes.io/component: controller
     app.kubernetes.io/name: prometheus-operator
-    app.kubernetes.io/version: 0.51.1-rc.0
+    app.kubernetes.io/version: 0.51.1
   name: prometheus-operator
   namespace: default
 spec:
