--- a/jsonnet/prometheus-operator/alertmanagerconfigs-crd.json
+++ b/jsonnet/prometheus-operator/alertmanagerconfigs-crd.json
@@ -58,13 +58,23 @@
                           "items": {
                             "description": "Matcher defines how to match on alert's labels.",
                             "properties": {
+                              "matchType": {
+                                "description": "Match operation available with AlertManager >= v0.22.0 and takes precedence over Regex (deprecated) if non-empty.",
+                                "enum": [
+                                  "!=",
+                                  "=",
+                                  "=~",
+                                  "!~"
+                                ],
+                                "type": "string"
+                              },
                               "name": {
                                 "description": "Label to match.",
                                 "minLength": 1,
                                 "type": "string"
                               },
                               "regex": {
-                                "description": "Whether to match on equality (false) or regular-expression (true).",
+                                "description": "Whether to match on equality (false) or regular-expression (true). Deprecated as of AlertManager >= v0.22.0 where a user should use MatchType instead.",
                                 "type": "boolean"
                               },
                               "value": {
@@ -84,13 +94,23 @@
                           "items": {
                             "description": "Matcher defines how to match on alert's labels.",
                             "properties": {
+                              "matchType": {
+                                "description": "Match operation available with AlertManager >= v0.22.0 and takes precedence over Regex (deprecated) if non-empty.",
+                                "enum": [
+                                  "!=",
+                                  "=",
+                                  "=~",
+                                  "!~"
+                                ],
+                                "type": "string"
+                              },
                               "name": {
                                 "description": "Label to match.",
                                 "minLength": 1,
                                 "type": "string"
                               },
                               "regex": {
-                                "description": "Whether to match on equality (false) or regular-expression (true).",
+                                "description": "Whether to match on equality (false) or regular-expression (true). Deprecated as of AlertManager >= v0.22.0 where a user should use MatchType instead.",
                                 "type": "boolean"
                               },
                               "value": {
@@ -2767,13 +2787,23 @@
                         "items": {
                           "description": "Matcher defines how to match on alert's labels.",
                           "properties": {
+                            "matchType": {
+                              "description": "Match operation available with AlertManager >= v0.22.0 and takes precedence over Regex (deprecated) if non-empty.",
+                              "enum": [
+                                "!=",
+                                "=",
+                                "=~",
+                                "!~"
+                              ],
+                              "type": "string"
+                            },
                             "name": {
                               "description": "Label to match.",
                               "minLength": 1,
                               "type": "string"
                             },
                             "regex": {
-                              "description": "Whether to match on equality (false) or regular-expression (true).",
+                              "description": "Whether to match on equality (false) or regular-expression (true). Deprecated as of AlertManager >= v0.22.0 where a user should use MatchType instead.",
                               "type": "boolean"
                             },
                             "value": {
