--- a/.github/workflows/checks.yaml
+++ b/.github/workflows/checks.yaml
@@ -8,8 +8,6 @@ on:
       - 'main'
     tags:
       - 'v*'
-env:
-  golang-version: '1.17'
 jobs:
   generate:
     runs-on: ${{ matrix.os }}
@@ -21,18 +19,22 @@ jobs:
     name: Generate and format
     steps:
     - uses: actions/checkout@v2
+    - name: Import environment variables from file
+      run: cat ".github/env" >> $GITHUB_ENV
     - uses: actions/setup-go@v2
       with:
-        go-version: ${{ env.golang-version }}
+        go-version: '${{ env.golang-version }}'
     - run: make --always-make format generate && git diff --exit-code
   check-docs:
     runs-on: ubuntu-latest
     name: Check Documentation formatting and links
     steps:
     - uses: actions/checkout@v2
+    - name: Import environment variables from file
+      run: cat ".github/env" >> $GITHUB_ENV
     - uses: actions/setup-go@v2
       with:
-        go-version: ${{ env.golang-version }}
+        go-version: '${{ env.golang-version }}'
     - run: make check-docs
   check-golang:
     runs-on: ubuntu-latest
@@ -49,9 +51,11 @@ jobs:
     name: Check prometheus metrics
     steps:
     - uses: actions/checkout@v2
+    - name: Import environment variables from file
+      run: cat ".github/env" >> $GITHUB_ENV
     - uses: actions/setup-go@v2
       with:
-        go-version: ${{ env.golang-version }}
+        go-version: '${{ env.golang-version }}'
     - run: make check-metrics
   build:
     runs-on: ${{ matrix.os }}
@@ -63,17 +67,21 @@ jobs:
     name: Build operator binary
     steps:
     - uses: actions/checkout@v2
+    - name: Import environment variables from file
+      run: cat ".github/env" >> $GITHUB_ENV
     - uses: actions/setup-go@v2
       with:
-        go-version: ${{ env.golang-version }}
+        go-version: '${{ env.golang-version }}'
     - run: make operator
   po-rule-migration:
     runs-on: ubuntu-latest
     name: Build Prometheus Operator rule config map to rule file CRDs CLI tool
     steps:
     - uses: actions/checkout@v2
+    - name: Import environment variables from file
+      run: cat ".github/env" >> $GITHUB_ENV
     - uses: actions/setup-go@v2
       with:
-        go-version: ${{ env.golang-version }}
+        go-version: '${{ env.golang-version }}'
     - run: cd cmd/po-rule-migration && go install
 
