--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -10,8 +10,6 @@ on:
       - 'v*'
       - '!pkg*'
 
-env:
-  golang-version: '1.17'
 jobs:
   publish:
     runs-on: ubuntu-latest
@@ -19,10 +17,12 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
+      - name: Import environment variables from file
+        run: cat ".github/env" >> $GITHUB_ENV
       - name: Install Go
         uses: actions/setup-go@v2
         with:
-          go-version: ${{ env.golang-version }}
+          go-version: '${{ env.golang-version }}'
       - name: login to quay.io
         uses: docker/login-action@v1
         with:
