--- a/.drone.yml
+++ b/.drone.yml
@@ -3,6 +3,9 @@ kind: pipeline
 type: digitalocean
 name: default
 
+token:
+  from_secret: digital-ocean-token
+
 steps:
 - name: greeting
   commands:
