--- a/.github/workflows/e2e.yaml
+++ b/.github/workflows/e2e.yaml
@@ -14,20 +14,29 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        suite: [alertmanager, prometheus, thanosruler]
+        suite: [alertmanager, prometheus, prometheusAllNS, thanosruler]
         include:
           - suite: alertmanager
             prometheus: "exclude"
+            prometheusAllNS: "exclude"
             alertmanager: ""
             thanosruler: "exclude"
             featureGated: "include"
           - suite: prometheus
             prometheus: ""
+            prometheusAllNS: "exclude"
+            alertmanager: "exclude"
+            thanosruler: "exclude"
+            featureGated: "include"
+          - suite: prometheusAllNS
+            prometheus: "exclude"
+            prometheusAllNS: ""
             alertmanager: "exclude"
             thanosruler: "exclude"
             featureGated: "include"
           - suite: thanosruler
             prometheus: "exclude"
+            prometheusAllNS: "exclude"
             alertmanager: "exclude"
             thanosruler: ""
             featureGated: "include"
@@ -64,6 +73,7 @@ jobs:
       run: >
         EXCLUDE_ALERTMANAGER_TESTS=${{ matrix.alertmanager }}
         EXCLUDE_PROMETHEUS_TESTS=${{ matrix.prometheus }}
+        EXCLUDE_PROMETHEUS_ALL_NS_TESTS=${{ matrix.prometheusAllNS }}
         EXCLUDE_THANOSRULER_TESTS=${{ matrix.thanosruler }}
         FEATURE_GATED_TESTS=${{ matrix.featureGated }}
         make test-e2e
