add a flag to enable local prometheus compaction when sidecar upload is configured
Signed-off-by: Ben Ye <ben.ye@bytedance.com>

--- a/bundle.yaml
+++ b/bundle.yaml
@@ -15712,6 +15712,10 @@ spec:
                     description: 'Thanos base image if other than default. Deprecated:
                       use ''image'' instead'
                     type: string
+                  enableLocalCompaction:
+                    description: EnableLocalCompaction enables Prometheus local TSDB
+                      compaction even if object storage config is provided.
+                    type: boolean
                   grpcServerTlsConfig:
                     description: 'GRPCServerTLSConfig configures the gRPC server from
                       which Thanos Querier reads recorded rule data. Note: Currently
