*: replace occurance of master branch with main branch
Signed-off-by: paulfantom <pawel@krupa.net.pl>

--- a/.mdox.validate.yaml
+++ b/.mdox.validate.yaml
@@ -13,3 +13,6 @@ validators:
   # Ignore release links.
   - regex: 'https:\/\/github\.com\/prometheus-operator\/prometheus-operator\/releases'
     type: "ignore"
+  # Ignore GitHub container packages link as it returns 404 in curl, but works in browser
+  - regex: 'https://github.com/prometheus-operator/prometheus-operator/pkgs/container/prometheus-operator'
+    type: "ignore"
