.github/workflows: group all e2e jobs into one job report

--- a/.github/workflows/e2e.yaml
+++ b/.github/workflows/e2e.yaml
@@ -77,3 +77,18 @@ jobs:
         EXCLUDE_THANOSRULER_TESTS=${{ matrix.thanosruler }}
         FEATURE_GATED_TESTS=${{ matrix.featureGated }}
         make test-e2e
+
+  # Added to summarize the matrix and allow easy branch protection rules setup
+  e2e-tests-result:
+    name: End-to-End Test Results
+    if: always()
+    needs:
+      - e2e-tests
+    runs-on: ubuntu-latest
+    steps:
+      - name: Mark the job as a success
+        if: needs.e2e-tests.result == 'success'
+        run: exit 0
+      - name: Mark the job as a failure
+        if: needs.e2e-tests.result != 'success'
+        run: exit 1
