--- a/scripts/tooling/Dockerfile
+++ b/scripts/tooling/Dockerfile
@@ -1,4 +1,4 @@
-FROM golang:1.14 as builder
+FROM golang:1.17 as builder
 
 ENV JSONNET_VERSION v0.15.0
 # This corresponds to v2.16.0, but needs to be written as commit hash due to golang 1.13 issues
@@ -6,6 +6,7 @@ ENV PROMTOOL_VERSION b90be6f32a33c03163d700e1452b54454ddce0ec
 ENV GOLANGCILINT_VERSION v1.23.6
 ENV JB_VERSION v0.3.1
 ENV GO_BINDATA_VERSION v3.1.3
+ENV CRDOC_VERSION v0.5.2
 
 RUN apt-get update -y && apt-get install -y g++ make git && \
     rm -rf /var/lib/apt/lists/*
@@ -22,13 +23,14 @@ RUN GO111MODULE=on go get github.com/jsonnet-bundler/jsonnet-bundler/cmd/jb@${JB
 RUN go get github.com/brancz/gojsontoyaml
 RUN go get github.com/campoy/embedmd
 RUN GO111MODULE=on go get github.com/go-bindata/go-bindata/v3/go-bindata@${GO_BINDATA_VERSION}
+RUN GO111MODULE=on go get github.com/fybrik/crdoc@${CRDOC_VERSION}
 
 # Add po-lint
 WORKDIR /go/src/github.com/prometheus-operator/prometheus-operator
 COPY . .
 RUN GO111MODULE=on make po-lint && chmod +x po-lint && mv po-lint /go/bin/
 
-FROM golang:1.14
+FROM golang:1.17
 RUN apt-get update -y && apt-get install -y make git jq gawk python-yaml && \
     rm -rf /var/lib/apt/lists/*
 COPY --from=builder /usr/local/bin/jsonnetfmt /usr/local/bin/jsonnetfmt
